--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,20 @@
-
 {
   "$schema": "https://json.schemastore.org/prettierrc",
   "semi": false,
   "singleQuote": true,
-  "printWidth": 100
+  "printWidth": 80,
+  "trailingComma": "all",
+  "arrowParens": "always",
+  "proseWrap": "always",
+  "endOfLine": "lf",
+  "experimentalTernaries": false,
+  "tabWidth": 2,
+  "useTabs": false,
+  "quoteProps": "consistent",
+  "jsxSingleQuote": false,
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "jsxBracketSameLine": false,
+  "vueIndentScriptAndStyle": false,
+  "singleAttributePerLine": false
 }
